--- a/extension/popup.html
+++ b/extension/popup.html
@@ -25,7 +25,7 @@
         <a class="link" href="https://darkpatterns.org">What are dark patterns?</a>
     </div>
     <div class="modal-footer">
-        <a class="link" href="http://localhost:8501">Tiny Nomad LLM</a>
+        <a class="link" href="https://darkpatternllm-3xhlzfjhjmhkclcbgfrtcr.streamlit.app/">Tiny Nomad LLM</a>
     </div>
 </body>
 
